--- a/pom.xml
+++ b/pom.xml
@@ -14,4 +14,13 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
 
+    <dependencies>
+        <dependency>
+            <groupId>io.github.spigotrce</groupId>
+            <artifactId>ByteFlow</artifactId>
+            <version>1.0-SNAPSHOT</version>
+            <scope>system</scope>
+            <systemPath>${basedir}/lib/ByteFlow-1.0-SNAPSHOT.jar</systemPath>
+        </dependency>
+    </dependencies>
 </project>
